Phase 2 F3/F4 — port chain link + torsion to device kernel (FAIL at bench)
Implements fused chainPairForcesKernel (F3 link + F4 torsion) with
unique-ownership semantics, per-FilSegment chain topology buffers
(topoEnd{1,2}Slot/Side + soaLengthArr), per-force step() gating, and
SingleFilDiag minimal-reproduction probe. SingleFilDiag passes cleanly
both arms; deflection bench shows ratio=1.262 vs CPU 1.000 (~26%
stiffness deficit), so DIAG_CPU_F3F4 default is inverted to true (CPU
pair runs by default; BOA_DIAG_CPU_F3F4=0 re-activates the device
kernel for debugging) until the deficit is resolved.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>